--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "doctrine/orm": "^2.5",
+        "exercise/htmlpurifier-bundle": "^1.0",
         "facebook/graph-sdk": "^5.4",
         "fzaninotto/faker": "^1.6",
         "geoip2/geoip2": "^2.4",
