Change CI config for deploy partial release branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,4 +194,5 @@ workflows:
                         only:
                             - develop
                             - release
+                            - partial-release
                             - master
