--- a/docker/dev/nginx.conf
+++ b/docker/dev/nginx.conf
@@ -11,7 +11,11 @@ events {
 }
 
 http {
-    access_log /dev/stdout;
+    log_format main '$http_x_forwarded_for ($remote_addr) - $remote_user [$time_local] '
+        '"$request" $status $body_bytes_sent "$http_referer" '
+        '"$http_user_agent"' ;
+
+    access_log /dev/stdout main;
 
     ##
     # Basic Settings
